--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:local": "pm2 startOrReload pm2.config.js --only iot-api --env local && pm2 log iot-api",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
